fixed width content for wrapping long lables

--- a/assets/sass/v2/_footer.scss
+++ b/assets/sass/v2/_footer.scss
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     .link {
-      width: max-content;
+      width: fit-content;
       padding: 0.3rem 0;
       word-wrap: break-word;
     }
